2005-07-10  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c:
	* gweather-applet.c: use dialog instead of g_warning
	  Closes bug #168807. Patch from Pedro Villavicencio
	  <pvillavi@gnome.org>.
	
	* gweather-pref.c: Clean up the location searching stuff. Set
	  mnemonics for labels and button. Make button show a more clear icon
	  and label.

2005-07-06  Davyd Madeley  <davyd@madeley.id.au>

	* weather-metar.c: Parse METAR string time with localtime_r, not
	  gmtime_r. This sets tm.tm_gmtoff to the local timezone offset
	  (rather then 0). This never used to be broken, and smells of a libc6
	  change.

2005-07-04  Rodrigo Moya <rodrigo@novell.com>

	* gweather-applet.c (update_finish): when libnotify is available,
	display a nice notification about the new forecast.

	* gweather-dialog.c (get_system_monospace_font): fixed leak.

	* Makefile.am: use LIBNOTIFY_CFLAGS|LIBS.

2005-07-01  Esteban Sanchez  <esteban@steve-0.com>

        * gweather.h (struct _GWeatherApplet): Added pref_find_entry and
          pref_find_next_btn
	  
        * gweather-pref.c: (gweather_pref_create): Added a find bar to the
	  location page. Fixed bug #305518

2005-07-01  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Locations Loving. Closes at least #306265.

2005-06-26  Máirín Duffy  <duffy@redhat.com>

	* Locations.xml.in: Restore unintentionally reverted UK 
	zone changes. Add additional UK zones (#309032).

2005-06-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Locations.xml.in: Nepal is in Asia, not Africa.
	Fixed bug #308269.

2005-06-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* Locations.xml.in: Rearrange locations in Thailand by cities.
	  Patch submitted via bug #160163.

2005-06-09  Kjartan Maraas  <kmaraas@gnome.org>

	* gweather-applet.c:
	* main.c: (gweather_applet_new):
	* weather.c:
	* weather.h: Remove gnome-config cruft. Closes bug #172028.

2005-05-31  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-pref.c:
	* gweather.h: