@@ -27747,6 +27747,12 @@
       </location>
       <location>
         <!-- Translators: This is in Baden-Württemberg in Germany. -->
+        <_name>Konstanz</_name>
+        <code>EDTZ</code>
+        <coordinates>47-41N 009-11E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Baden-Württemberg in Germany. -->
         <_name>Lahr</_name>
         <code>EDTL</code>
         <coordinates>48-22-09N 007-49-40E</coordinates>
@@ -27773,6 +27779,13 @@
           <coordinates>49-28-21N 008-30-56E</coordinates>
         </location>
       </city>
+      <!-- This one looks wrong... skipping
+      <location>
+        <_name>Meßstetten/Albstadt</_name>
+        <code>ETCE</code>
+        <coordinates>50-07N 009-07E</coordinates>
+      </location>
+      -->
       <location>
         <!-- Translators: This is in Baden-Württemberg in Germany. -->
         <_name>Meßstetten</_name>
@@ -27872,9 +27885,27 @@
       </location>
       <location>
         <!-- Translators: This is in Bavaria in Germany. -->
+        <_name>Illesheim</_name>
+        <code>ETIK</code>
+        <coordinates>49-28N 010-23E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Bavaria in Germany. -->
         <_name>Ingolstadt</_name>
         <code>ETSI</code>
         <coordinates>48-43N 011-32E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Bavaria in Germany. -->
+        <_name>Kitzingen</_name>
+        <code>ETIN</code>
+        <coordinates>49-45N 010-12E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Bavaria in Germany. -->
+        <_name>Kümmersbruck</_name>
+        <code>ETGK</code>
+        <coordinates>49-26N 011-54E</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Bavaria in Germany. -->
@@ -27966,16 +27997,29 @@
 	<coordinates>52-28N 013-24E</coordinates>
       </location>
     </city>
-    <!-- Couldn't get current weather information (checked 2004-10-17)
     <state>
+      <!-- Translators: This is a state in Germany. -->
       <_name>Brandenburg</_name>
+      <!-- Couldn't get current weather information (checked 2004-10-17)
       <location>
         <_name>Cottbus</_name>
         <code>ETHT</code>
         <coordinates>51-46N 014-18E</coordinates>
       </location>
+      -->
+      <location>
+        <!-- Translators: This is in Brandenburg in Germany. -->
+        <_name>Preschen</_name>
+        <code>ETNR</code>
+        <coordinates>51-40N 014-38E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Brandenburg in Germany. -->
+        <_name>Wittstock</_name>
+        <code>ETGW</code>
+        <coordinates>53-12N 012-31E</coordinates>
+      </location>
     </state>
-    -->
     <city>
       <!-- Translators: This is in Germany. -->
       <_name>Bremen</_name>
@@ -28101,6 +28145,12 @@
       </location>
       <location>
         <!-- Translators: This is in Lower Saxony in Germany. -->
+        <_name>Lemwerder</_name>
+        <code>EDWD</code>
+        <coordinates>53-09N 008-37E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Lower Saxony in Germany. -->
         <_name>Meppen</_name>
         <code>ETWM</code>
         <coordinates>52-43-24N 007-19-35E</coordinates>
@@ -28116,6 +28166,12 @@
           <coordinates>53-46N 008-40E</coordinates>
         </location>
       </city>
+      <location>
+        <!-- Translators: This is in Lower Saxony in Germany. -->
+        <_name>Nordhorn</_name>
+        <code>ETUN</code>
+        <coordinates>52-27N 007-10E</coordinates>
+      </location>
       <city>
         <!-- Translators: This is in Lower Saxony in Germany. -->
         <_name>Wittmund</_name>
@@ -28260,6 +28316,12 @@
       </location>
       <location>
         <!-- Translators: This is in North Rhine-Westphalia in Germany. -->
+        <_name>Laarbruch</_name>
+        <code>ETUL</code>
+        <coordinates>51-36N 006-09E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in North Rhine-Westphalia in Germany. -->
         <_name>Mönchengladbach</_name>
         <code>EDLN</code>
         <coordinates>51-13-49N 006-30-16E</coordinates>
@@ -28336,15 +28398,33 @@
       </location>
       <location>
         <!-- Translators: This is in Rhineland-Palatinate in Germany. -->
+        <_name>Idar-Oberstein</_name>
+        <code>ETGI</code>
+        <coordinates>49-42N 007-20E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Rhineland-Palatinate in Germany. -->
         <_name>Mendig</_name>
         <code>ETHM</code>
         <coordinates>50-22N 007-19E</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Rhineland-Palatinate in Germany. -->
+        <_name>Pferdsfeld</_name>
+        <code>ETSP</code>
+        <coordinates>49-51N 007-36E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Rhineland-Palatinate in Germany. -->
         <_name>Ramstein</_name>
         <code>ETAR</code>
         <coordinates>49-26N 007-36E</coordinates>
+      </location>
+      <location>
+        <!-- Translators: This is in Rhineland-Palatinate in Germany. -->
+        <_name>Sembach</_name>
+        <code>ETAS</code>
+        <coordinates>49-30N 007-52E</coordinates>
       </location>
       <location>
         <!-- Translators: This is in Rhineland-Palatinate in Germany. -->
@@ -28550,73 +28630,6 @@
         </location>
       </city>
     </state>
-
-    <!-- New locations: move these to the correct state or city -->
-    <location>
-      <_name>Idar-Oberstein</_name>
-      <code>ETGI</code>
-      <coordinates>49-42N 007-20E</coordinates>
-    </location>
-    <location>
-      <_name>Illesheim</_name>
-      <code>ETIK</code>
-      <coordinates>49-28N 010-23E</coordinates>
-    </location>
-    <location>
-      <_name>Kitzingen</_name>
-      <code>ETIN</code>
-      <coordinates>49-45N 010-12E</coordinates>
-    </location>
-    <location>
-      <_name>Konstanz</_name>
-      <code>EDTZ</code>
-      <coordinates>47-41N 009-11E</coordinates>
-    </location>
-    <location>
-      <_name>Kuemmersruck</_name>
-      <code>ETGK</code>
-      <coordinates>49-26N 011-54E</coordinates>
-    </location>
-    <location>
-      <_name>Laarbruch</_name>
-      <code>ETUL</code>
-      <coordinates>51-36N 006-09E</coordinates>
-    </location>
-    <location>
-      <_name>Lemwerder</_name>
-      <code>EDWD</code>
-      <coordinates>53-09N 008-37E</coordinates>
-    </location>
-    <location>
-      <_name>Mebstetten/Albstadt</_name>
-      <code>ETCE</code>
-      <coordinates>50-07N 009-07E</coordinates>
-    </location>
-    <location>
-      <_name>Nordhorn</_name>
-      <code>ETUN</code>
-      <coordinates>52-27N 007-10E</coordinates>
-    </location>
-    <location>
-      <_name>Pferdsfeld</_name>
-      <code>ETSP</code>
-      <coordinates>49-51N 007-36E</coordinates>
-    </location>
-    <location>
-      <_name>Preschen</_name>
-      <code>ETNR</code>
-      <coordinates>51-40N 014-38E</coordinates>
-    </location>
-    <location>
-      <_name>Sembach</_name>
-      <code>ETAS</code>
-      <coordinates>49-30N 007-52E</coordinates>
-    </location>
-    <location>
-      <_name>Wittstock</_name>
-      <code>ETGW</code>
-      <coordinates>53-12N 012-31E</coordinates>
-    </location>
   </country>
   <country>
     <_name>Greece</_name>
