@@ -1,3 +1,8 @@
+2005-07-11  Davyd Madeley  <davyd@madeley.id.au>
+
+	* Locations.xml.in: German location updates. Patch from Jens ??
+	  <inf408@FH-Worms.de>. Closes #166913.
+
 2005-07-10  Davyd Madeley  <davyd@madeley.id.au>
 
 	* gweather-pref.c:
